@@ -6,6 +6,16 @@ Next release (1.7) schedule
 
 Beta release mid-July 2011, final release early August.
 
+Next release
+~~~~~~~~~~~~
+
+* Made ``--no-site-packages`` behavior the default behavior.  The
+  ``--no-site-packages`` flag is still permitted, but displays a warning when
+  used.
+
+* New flag: ``--use-site-packages``; this flag should be passed to get the
+  previous default global-site-package-including behavior back.
+
 1.6.4 (2011-07-21)
 ~~~~~~~~~~~~~~~~~~
 
